--- a/content/talk/NASN2018.md
+++ b/content/talk/NASN2018.md
@@ -2,6 +2,9 @@
 title = "The impact of centrality on body dissatisfaction within a sorority using two network generators"
 date = 2018-11-28
 draft = false
+all_day = true
+
+publishDate = 2019-02-17
 
 # Authors. Comma separated list, e.g. `["Bob Smith", "David Jones"]`.
 authors = ["Prochnow, T", "Patterson MS"]
